<?xml version="1.0"?>
<package>
  <name>msg_boost_python</name>
  <version>0.0.0</version>
  <description>The msg_boost_python package</description>

  <maintainer email="p.gorczak@gmail.com">Philipp Gorczak</maintainer>

  <license>LGPLv3</license>

  <author email="p.gorczak@gmail.com">Philipp Gorczak</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
