<?xml version="1.0"?>
<package>
  <name>sensor_msgs_boost_python</name>
  <version>0.0.0</version>
  <description>An msg_boost_python package</description>

  <maintainer email="p.gorczak@gmail.com">Philipp Gorczak</maintainer>

  <license>LGPLv3</license>

  <author email="p.gorczak@gmail.com">Philipp Gorczak</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>msg_boost_python</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>msg_boost_python</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>